Added SimpleDatabaseService with basic functionalities, added log4j2.xml, added simple .sql files creating main database, added some .fxml screen files for testing